# nextjs-fastapi-postgres-starter

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  WIP_test_api.py  api.py  crud.py  db_engine.py  main.py  pyproject.toml  seed.py  test_api.py
backend/app/: api.py  chatbot.py  crud.py  db.py  models.py  schemas.py  websocket.py
backend/app/core/: database.py  logging.py  startup.py
backend/app/core/settings/: __init__.py  base.py  development.py
frontend/: .env.example  Dockerfile
frontend/app/: page.tsx
frontend/app/components/: Chat.tsx  MessageInput.tsx  MessageList.tsx
frontend/app/config/: api.config.ts
frontend/app/services/: api.ts  websocket.ts
frontend/app/types/: chat.ts
frontend/app/utils/: api.utils.ts
