[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend API for chatbot application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">3.7"
fastapi = "*"
sqlalchemy = "*"
asyncpg = "*"
greenlet = "*"
psycopg2 = "*"
uvicorn = {extras = ["standard"], version = "*"}
pydantic = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
httpx = "*"
pytest-asyncio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
